# electronics_store

./: README.md  pyproject.toml  setup.cfg
config/: settings.py  urls.py
contacts/: admin.py  models.py  serializers.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_rename_citi_contact_city.py
products/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_remove_product_supplier_product_supplier.py
suppliers/: admin.py  models.py  paginators.py  serializers.py  services.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py  0002_alter_supplier_debt.py  0003_rename_level_supplier_hierarchy_level_and_more.py  0004_alter_supplier_hierarchy_level.py  0005_alter_supplier_supplier.py  0006_alter_supplier_hierarchy_level.py  0007_alter_supplier_supplier.py
suppliers/tests/: conftest.py  test_suppliers_views.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
